# byterw

./: .gitignore  README.md  README.zh.md  pyproject.toml  setup.py
.github/workflows/: build.yml  push-gitee.yml
C/: _crypt.c  _crypt.cpp  buffer.cpp  buffer.h  common.h  crypt.cpp  crypt.h  module.cpp  pyobj.cpp  pyobj.h  pyreader.cpp  pyreader.h  pywriter.cpp  pywriter.h  reader.cpp  reader.h  writer.cpp  writer.h
src/byterw/: __init__.py  _byterw.pyi  _crypt.pyi  byte_reader.py  byte_writer.py  common.py  crypt.py  mv2value.py  value2ba.py  value_type.py
tests/: dataset.py  test_bool.py  test_bytes.py  test_datetime.py  test_dict.py  test_exception.py  test_float.py  test_int.py  test_list.py  test_mixed.py  test_model.py  test_none.py  test_path.py  test_set.py  test_str.py  test_tuple.py
