[project]
name = "byterw"
version = "0.1.1"
description = "En(De)crypt Python objects into bytes"
authors = [
    { name = "wyf7685", email = "69091901+wyf7685@users.noreply.github.com" },
]
dependencies = ["pydantic>=2.7.0"]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "setuptools>=69.5.1",
    "mypy>=1.9.0",
    "build>=1.2.1",
    "pytest>=8.1.1",
    "coverage>=7.4.4",
]

[tool.pdm.scripts]
coverage_test = "coverage run --source byterw -m pytest tests"
coverage_report = "coverage report --fail-under 100"
coverage_xml = "coverage xml"
mypy_check = "mypy src/byterw"
test = { composite = [
    "mypy_check",
    "coverage_test",
    "coverage_report",
    "coverage_xml",
] }
