[project]
name = "byterw"
version = "0.2.3"
description = "En(De)crypt Python objects into bytes"
authors = [{ name = "wyf7685", email = "wyf7685@163.com" }]
dependencies = []
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "setuptools>=69.5.1",
    "mypy>=1.9.0",
    "pytest>=8.1.1",
    "pydantic>=2.7.1",
    "coverage>=7.6.1",
]

[tool.pdm.scripts]
instdev = "pdm install --no-editable --dev"
test = { composite = [
    "mypy src/byterw",
    "coverage run --source byterw -m pytest tests",
] }
